--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.github.patrickz98.performancetester">
 
+    <!--<uses-feature android:glEsVersion="0x00020000" android:required="true" />-->
+    <!--<uses-feature android:glEsVersion="0x00030000" android:required="true" />-->
+    <uses-feature android:glEsVersion="0x00030001" android:required="true" />
+    <supports-gl-texture android:name="GL_OES_compressed_ETC1_RGB8_texture" />
+    <supports-gl-texture android:name="GL_OES_compressed_paletted_texture" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
